Fix too large space between heading and thumbnails on Safari

--- a/app/assets/stylesheets/application/image_gallery.css
+++ b/app/assets/stylesheets/application/image_gallery.css
@@ -55,3 +55,7 @@
 	text-align: center;
 	margin-block: 0;
 }
+
+.ImageLightbox-item {
+	display: block;
+}
